package builder.after;


import lombok.Data;

@Data
public class House {
    private String basic;
    private String wall;
    private String roofed;
}
